Update and rename 定时器.md to 定时器与中断.md

--- a/note/定时器与中断.md
+++ b/note/定时器与中断.md
@@ -20,3 +20,12 @@ void Time0_Init()
 	TR0 = 1;		//所以如果要让定时器工作,TR0 就必须置 1
 }
 ```
+
+## 中断
+定时器与中断的区分：定时器为模块中的资源，中断为单片机中的一个机制
+
+### 中断相关寄存器
+
+中断使能、中断优先级寄存器
+
+中断函数写好后，当满足条件的中断被触发时，系统自动来调用中断函数。
